Rearranged styles to avoid flex layout issue with SearchFiles > Checkbox (#8194)

--- a/packages/bvaughn-architecture-demo/components/search-files/SearchFiles.module.css
+++ b/packages/bvaughn-architecture-demo/components/search-files/SearchFiles.module.css
@@ -5,7 +5,7 @@
   padding: 0.5em 0;
 }
 
-.Checkbox {
+.CheckboxWrapper {
   flex: 0 0 auto;
   margin: 0.5em;
 }
